# llm-wiki-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
config/: codex-config.toml  examples.config.yaml  hermes-config.yaml
docs/: design.md  wiki-mcp
examples/: hermes-config.yaml  sample-config.yaml
src/llm_wiki_mcp/: __init__.py  advanced.py  bootstrap.py  candidates.py  config.py  content.py  frontmatter.py  lint.py  log.py  pages.py  paths.py  raw.py  related.py  responses.py  search.py  server.py  sync.py
tests/: conftest.py  test_advanced_tools.py  test_bootstrap_safety.py  test_candidates.py  test_frontmatter_validation.py  test_log_lint.py  test_pages_search.py  test_paths.py  test_raw.py  test_related.py  test_response_envelopes.py  test_server_tools.py  test_smoke_workflow.py  test_sync.py
