[project]
name = "llm-wiki-mcp"
version = "0.1.0"
description = "MCP server for building and maintaining Karpathy-style LLM wikis."
readme = "README.md"
authors = [
    { name = "Jaron Lu" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
llm-wiki-mcp = "llm_wiki_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
